Task5/front-end-app.yaml
# front-end-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-app
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      component: front-end
  template:
    metadata:
      labels:
        component: front-end
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: front-end-app
  namespace: default
  labels:
    component: front-end
spec:
  selector:
    component: front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
